# slang

./: CLAUDE.md  Cargo.toml  ROADMAP.md  qbe-ref.html  run.sh
.claude/: settings.local.json
.claude/commands/: review.md
.zed/: tasks.json
examples/: main.sl
src/: grammar.bnf  ir.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  qbe.rs  repl.rs
